--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,9 +1,11 @@
 <html>
 
 <head>
+  <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com">
   <title>Express</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel="shortcut icon" href="#">
+  
 </head>
 
 <body>
